# Rust-embeded

hello/: Cargo.toml  build.rs  memory.x  runner.bat
hello/.cargo/: config.toml
hello/src/: main.rs
