[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
